tests/compile/child_and_hub_flag_ambiguous.stderr
error: #[plexus_macros::activation(hub, ...)] cannot be combined with #[plexus_macros::child] methods — the macro infers hub-mode from the presence of #[child] methods. Remove the 'hub' flag or remove the #[child] methods.
  --> tests/compile/child_and_hub_flag_ambiguous.rs:35:1
   |
35 | / impl Mixed {
36 | |     #[plexus_macros::method]
37 | |     async fn ping(&self) -> impl Stream<Item = String> + Send + 'static {
38 | |         stream! { yield "pong".into(); }
...  |
45 | | }
   | |_^

warning: use of deprecated struct `plexus_core::ChildCapabilities`: Use MethodRole::DynamicChild { list_method, search_method } instead. Removed in 0.7.
  --> tests/compile/child_and_hub_flag_ambiguous.rs:12:1
   |
12 | / #[plexus_macros::activation(
13 | |     namespace = "leaf",
14 | |     version = "1.0.0",
15 | |     crate_path = "plexus_core"
16 | | )]
   | |__^
   |
   = note: `#[warn(deprecated)]` on by default
   = note: this warning originates in the attribute macro `plexus_macros::activation` (in Nightly builds, run with -Z macro-backtrace for more info)
